tests/query_errors/pipeline_stream_port_conflict/error.txt
Error: 
    5 |   create stream input_stream;
      |   ^^^^^^^^^^^^^^^^^^^^^^^^^^ Streams cannot share names with from/into ports
